yggdrasil/templates/argo-wf.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argowf-server
  namespace: tooling
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`service-poc.westeurope.cloudapp.azure.com`) && PathPrefix(`/argo`)
      services:
        - kind: Service
          name: argo-argo-workflows-server
          namespace: tooling
          port: 2746
          scheme: https
  tls:
    secretName: default-tls
